# ui-mono

./: .gitignore  CHANGELOG.md  README.md  UPDATE_2026-04-09_rename-and-package-sync.md  pyproject.toml
src/py_pi_agent/: agent_loop.py  app.py  cli.py  config.py
src/py_pi_agent/context/: truncation.py
src/py_pi_agent/models/: anthropic.py  base.py
src/py_pi_agent/session/: store.py
src/py_pi_agent/tools/: bash.py  edit.py  find.py  grep.py  ls.py  read.py  write.py
src/ui_mono/: agent_loop.py  app.py  cli.py  config.py  tools_base.py  types.py
src/ui_mono/context/: prompt_builder.py  truncation.py
src/ui_mono/models/: anthropic.py  base.py  demo.py  streaming.py
src/ui_mono/runtime/: agent_session.py  events.py  observer.py
src/ui_mono/session/: schema.py  store.py  summary.py  tree.py
src/ui_mono/tools/: bash.py  edit.py  find.py  grep.py  ls.py  policy.py  read.py  write.py
tests/: test_agent_loop.py  test_anthropic_model.py  test_code_demo.py  test_rpc_mode.py  test_session_store.py  test_tools.py
