[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ui-mono"
version = "0.1.0"
description = "Python coding agent MVP inspired by pi-mono"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.52.0",
  "python-dotenv>=1.0.1",
  "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
ui-mono = "ui_mono.cli:app"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
